# eosio-wcr-registry

./: LICENSE  README.md
entries/: EOSIO-WCR-104.md  EOSIO-WCR-105.md  EOSIO-WCR-106.md  EOSIO-WCR-107.md  EOSIO-WCR-108.md  EOSIO-WCR-109.md  EOSIO-WCR-110.md  EOSIO-WCR-111.md  EOSIO-WCR-112.md  EOSIO-WCR-113.md  EOSIO-WCR-114.md  EOSIO-WCR-115.md  EOSIO-WCR-TEMPLATE.md
test_cases/: .gitignore  CMakeLists.txt  hydra.hpp  hydra.yml  jest.config.js  package-lock.json  package.json
test_cases/template/: fix.cpp  fixed.cpp
test_cases/template/tests/: vulnerable.test.js
test_cases/wcr-105/: CMakeLists.txt  fix.cpp  freezevuln.cpp  vulnerable.cpp
test_cases/wcr-105/tests/: freezevuln.test.js  vulnerable.test.js
test_cases/wcr-106/: fix.cpp  vulnerable.cpp
test_cases/wcr-106/tests/: vulnerable.test.js
test_cases/wcr-107/: attacker.cpp  fix.cpp  vulnerable.cpp
test_cases/wcr-107/tests/: vulnerable.test.js
test_cases/wcr-108/: CMakeLists.txt  attacker.cpp  fix.cpp  vulnerable.cpp
test_cases/wcr-108/tests/: vulnerable.test.js
test_cases/wcr-111/: fix.cpp  vulnerable.cpp
test_cases/wcr-111/tests/: vulnerable.test.js
test_cases/wcr-113/: attacker.cpp  fix.cpp  vulnerable.cpp
test_cases/wcr-113/tests/: vulnerable.test.js
